--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ moments</h2>		</div>
 				<div class="elementor-element elementor-element-5600384 elementor-align-center elementor-widget elementor-widget-button" data-id="5600384" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://www.cricnft.github.io/tophits/collections" class="elementor-button-link elementor-button elementor-size-sm" role="button">
+			<a href="https://cricnft.github.io/tophits/collections" class="elementor-button-link elementor-button elementor-size-sm" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">VIEW MORE</span>
 		</span>
@@ -968,7 +968,7 @@ Go to your collections to open the balls
 				<div class="elementor-element elementor-element-d50e2d8 elementor-align-center elementor-widget elementor-widget-button" data-id="d50e2d8" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://www.cricnft.github.io/tophits/collections/" class="elementor-button-link elementor-button elementor-size-lg" role="button">
+			<a href="https://cricnft.github.io/tophits/collections/" class="elementor-button-link elementor-button elementor-size-lg" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">View collection</span>
 		</span>
